--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@ function layout()
     <h2 id="level"></h2>
 </center>
 <center>
-
+<p style="margin-top:500px"><b> Press key 'w' to move up.<br>
+    Press key 's' to move down.<br>Press key 'a' to move left.<br>Press key 'd' to move right.<br>Watch Out for the black obstacles!</b></p>
 </center>
     </body>
     </html>
