--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ function layout()
 </center>
 <center>
 <p style="margin-top:500px"><b> Press key 'w' to move up.<br>
-    Press key 's' to move down.<br>Press key 'a' to move left.<br>Press key 'd' to move right.<br>Watch Out for the black obstacles!</b></p>
+    Press key 's' to move down.<br>Press key 'a' to move left.<br>Press key 'd' to move right.<br>Move the Red piece to catch the Blue target<br>Watch Out for the black obstacles!</b></p>
 </center>
     </body>
     </html>
